# django-pagination-bootstrap

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.py  tox.ini
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: constraints.txt  dependabot.yml  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
pagination_bootstrap/: __init__.py  middleware.py  paginator.py  tests.py  version.py
pagination_bootstrap/templates/: paginate_bs2.html  pagination.html
pagination_bootstrap/templatetags/: pagination_tags.py
src/django_pagination_bootstrap/: __init__.py  middleware.py  paginator.py  tests.py
src/django_pagination_bootstrap/templates/: pagination.html
src/django_pagination_bootstrap/templatetags/: __init__.py  pagination_tags.py
tests/: __init__.py  manage.py  settings.py  test_http_request.py  test_middleware.py  test_pagination_tags.py  test_paginator.py
tests/testapp/: __init__.py
